[package]
name = "rtimelog"
description = "Command line time tracker compatible with gtimelog"
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rtimelog"

[dependencies]
chrono = "0.4.23"
dirs = "4"
once_cell = "1"
rustyline = "10"
